Chnages related to add appointment and popup

--- a/AngularMvcProject/App/View/wizard/wizard.html
+++ b/AngularMvcProject/App/View/wizard/wizard.html
@@ -364,7 +364,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="group_label">
+                                    <div class="group_label"> 
                                         <p>Setup only takes a moment, you'll be booking appointments in no time.</p>
                                         <div class="form-group">
                                             <label class="control-label">Your Business</label>
@@ -568,7 +568,7 @@
                                                     <div class="col-md-2 col-sm-2 col-xs-12">
 
                                                         <div class="form-group ">
-                                                            <input type="text" class="form-control" ng-model="service.time" ng-blur="EditService(service)" id="" placeholder="">
+                                                            <input type="text" class="form-control" ng-model="service.DurationInMinutes" ng-blur="EditService(service)" id="" placeholder="">
                                                         </div>
                                                     </div>
                                                     <div class="col-md-2 col-sm-2 col-xs-12">
